--- a/src/components/ConfirmationModal.module.css
+++ b/src/components/ConfirmationModal.module.css
@@ -1,9 +1,21 @@
 .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100%;
+}
+
+.wrapper {
+  background-color: #1c2e41;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  min-width: 400px;
+  height: auto;
+  min-height: 300px;
+  border-radius: 5%;
 }
 
 .confirm {
